# front-tef-bridge

./: README.md  angular.json  build-installer.bat  create-icon.ps1  package-lock.json  package.json
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.ts  app.routes.ts  app.spec.ts  app.ts
src/app/pages/ativacao/: ativacao.component.ts
src/app/pages/configuracao/: configuracao.component.ts
src/app/pages/status/: status.component.ts
src/app/services/: tef-bridge.service.ts
